Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33019

The database part is not case sensitive in SP names

Details

    Description

      I start MariaDB with lower-case-table-names=0 and run this script:

      CREATE DATABASE DB1;
      CREATE DATABASE db1;
      CREATE PROCEDURE DB1.sp() SELECT 'This is DB1.sp';
      CREATE PROCEDURE db1.sp() SELECT 'This is db1.sp';
      CALL DB1.sp();
      

      +----------------+
      | This is DB1.sp |
      +----------------+
      | This is DB1.sp |
      +----------------+
      

      So far so good. The first procedure DB1 works fine.

      Now I call the second procedure db1.

      CALL db1.sp();
      

      +----------------+
      | This is DB1.sp |
      +----------------+
      | This is DB1.sp |
      +----------------+
      

      Notice, it erroneously called the first procedure DB1.

      Attachments

        Issue Links

          Activity

            There are no comments yet on this issue.

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.