sql/sql_lex.cc
@@ -6754,7 +6754,7 @@ sp_head *LEX::make_sp_head(THD *thd, const sp_name *name,
                                       name->m_name);
       else
         sp->init_sp_name(name);
-      if (!(sp->m_qname= sp->make_qname(sp->get_main_mem_root())).str)
+      if (!(sp->m_qname= sp->make_qname(sp->get_main_mem_root(), true)).str)
         return NULL;
     }
     sphead= sp;
@@ -8633,7 +8633,7 @@ bool LEX::call_statement_start(THD *thd, const LEX_CSTRING &db,
 
   // Concat `pkg` and `name` to `pkg.name`
   LEX_CSTRING pkg_dot_proc;
-  if (!(pkg_dot_proc= q_pkg_proc.make_qname(thd->mem_root)).str ||
+  if (!(pkg_dot_proc= q_pkg_proc.make_qname(thd->mem_root, false)).str ||
       check_ident_length(&pkg_dot_proc) ||
       !(spname= new (thd->mem_root) sp_name(&db, &pkg_dot_proc, true)))
     return true;
@@ -8699,7 +8699,7 @@ sp_package *LEX::create_package_start(THD *thd,
     return NULL;
   pkg->reset_thd_mem_root(thd);
   pkg->init(this);
-  if (!(pkg->m_qname= pkg->make_qname(pkg->get_main_mem_root())).str)
+  if (!(pkg->m_qname= pkg->make_qname(pkg->get_main_mem_root(), true)).str)
     return NULL;
   sphead= pkg;
   return pkg;
@@ -9045,7 +9045,7 @@ Item *LEX::make_item_func_call_generic(THD *thd,
 
   // Concat `pkg` and `name` to `pkg.name`
   LEX_CSTRING pkg_dot_func;
-  if (!(pkg_dot_func= q_pkg_func.make_qname(thd->mem_root)).str ||
+  if (!(pkg_dot_func= q_pkg_func.make_qname(thd->mem_root, false)).str ||
       check_ident_length(&pkg_dot_func) ||
       !(qname= new (thd->mem_root) sp_name(&db, &pkg_dot_func, true)))
     return NULL;
